--- a/tests/style.css
+++ b/tests/style.css
@@ -13,7 +13,7 @@ body {
   padding: 0 1rem;
   background: rgb(44, 44, 44);
   box-sizing: border-box;
-  height: 100%;
+  min-height: 100%;
   color: lightgray;
 }
 
