--- a/tests/style.css
+++ b/tests/style.css
@@ -1,29 +1,156 @@
-html {
-  background: rgb(22, 22, 22);
+:root {
+  --font-color: #b6a692;
+  --background-color: #0A0B1B;
+  --border-color: #5a4c3a;
+  --code-border-color: #232760;
+  --heading-color: #b6a692;
+  --light-blue: #57d5ff;
+  --lighter-blue: #91e4ff;
+  --darkened-blue: #00a0d5;
+
+  color-scheme: dark;
+}
+
+html, body {
+  background: var(--background-color);
   height: 100vh;
   margin: 0;
   padding: 0;
 }
 
 body {
-  overflow-y: scroll;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  max-width: 40rem;
-  margin: 0 auto;
-  padding: 0 1rem;
-  background: rgb(44, 44, 44);
+  overflow: hidden;
   box-sizing: border-box;
-  min-height: 100%;
-  color: lightgray;
+  height: 100%;
+  color: var(--font-color);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  display: flex;
+  flex-direction: column;
+
+  main {
+    padding: 4rem 1rem;
+    flex: 1 1 100%;
+    overflow-y: scroll;
+
+    .content {
+      max-width: 50rem;
+      margin: 0 auto;
+    }
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+      font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      color: var(--heading-color);
+  }
+
+  h1 {
+    text-align: center;
+    margin-top: 0;
+    padding-bottom: 2rem;
+    text-decoration: underline;
+  }
+
+  h2 {
+      border-bottom: 1px solid var(--border-color);
+  }
+
+  h3 {
+    margin-top: 2rem;
+    margin-bottom: .5rem;
+  }
+
+  a {
+    color: var(--light-blue);
+
+    &:visited {
+      color: var(--darkened-blue);
+    }
+    
+    @media(hover: hover) {
+      &:hover {
+        color: var(--lighter-blue);
+      }
+    }
+  }
 }
 
-h1 {
-  text-align: center;
-  color: rgb(168, 168, 168);
-  margin-top: 0;
-  padding-top: 4rem;
-  text-decoration: underline;
-  font-family:Georgia, 'Times New Roman', Times, serif;
+nav {
+  h2 {
+    margin: 0; padding: 0;
+    flex-basis: 100%;
+    border: none;
+    text-align: center;
+  }
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 2rem 0;
+  gap: 1rem;
+}
+
+.block {
+  position: relative;
+
+  .lang {
+    color: var(--light-blue) !important;
+    position: absolute;
+    top: .5rem; left: 1rem;
+    font-size: .8rem;
+  }
+}
+
+code {
+  border: 1px solid var(--code-border-color);
+
+  &.manual-highlight {
+    display: block;
+    padding: 1rem;
+  }
+
+  &.centered {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    &.inner {
+      text-align: left;
+    }
+  }
+}
+
+section {
+  & + section {
+    margin-top: 4rem;
+  }
+}
+
+nav + section {
+  margin-top: 4rem;
+}
+
+.next-previous {
+  max-width: 50rem;
+  margin: 0 auto;
+  display: flex;
+  padding: .25rem;
+  box-sizing: border-box;
+  background: var(--background-color);
+  width: 100%;
+  z-index: 1;
+  justify-content: space-between;
+  border-top: 1px solid var(--code-border-color);
+
+  a { 
+    padding: .5rem;
+    text-decoration: none;
+    @media (hover: hover) {
+      &:hover {
+        background: var(--darkened-blue);
+        color: white;
+      }
+    }
+  }
 }
 
 .sync-grid {
@@ -34,7 +161,6 @@ h1 {
   margin: 2rem auto;
   padding: 2rem;
   border: 1px solid gray;
-  border-radius: 5px;
 }
 
 input, select {
@@ -54,7 +180,6 @@ label {
 .trans {
   margin: 1rem auto;
   position: relative;
-  border-radius: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -68,19 +193,4 @@ label {
 .colorful {
   background: purple;
   color: white;
-}
-
-p {
-  white-space: nowrap;
-  max-width: 100%;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-a {
-  color: rgb(119, 221, 255);
-}
-
-a:visited {
-  color: rgb(68, 208, 255);
 }
