--- a/dev/assets/root.css
+++ b/dev/assets/root.css
@@ -48,6 +48,7 @@ a {
     font-weight: bold;
     text-decoration: underline;
     text-underline-offset: 5px;
+    cursor: pointer;
 
     & + a {
         margin-left: 1rem;
