--- a/dev/assets/frontpage.css
+++ b/dev/assets/frontpage.css
@@ -5,4 +5,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    h2 {
+        color: var(--text-normal);
+        text-align: center;
+        max-width: 30rem;
+    }
 }
