--- a/dev/assets/root.css
+++ b/dev/assets/root.css
@@ -7,7 +7,7 @@
     --dark: black;
     --medium: rgb(100, 100, 100);
     --text-focus: #f8ffd1;
-    --text-normal: #dbdbdb;
+    --text-normal: #f7f4f4;
     --background: rgb(49, 49, 49);
 
     --border-radius: 4px;
@@ -27,7 +27,7 @@ body {
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
     line-height: 1.5;
-    color: rgb(219, 219, 219);
+    color: var(--text-normal);
 }
 
 h1, h2, h3 {
@@ -49,16 +49,18 @@ a {
     text-decoration: underline;
     text-underline-offset: 5px;
     cursor: pointer;
+    transition: text-underline-offset .3s ease;
 
     & + a {
         margin-left: 1rem;
     }
 
-    &:hover {
-        color: var(--light);
-    }
-
     &:visited {
         color: var(--text-focus);
+    }
+
+    &:active, &:hover {
+        text-underline-offset: 8px;
+        color: var(--light);
     }
 }
